fixed trainer spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  /* more on this crazy alphanumerical value in a minute! */
   color: #39a6b2;
   font-family: Helvetica, Arial, sans-serif;
 }
@@ -14,6 +15,7 @@ header {
   padding: 20px 35px;
   background-color: #39a6b2;
 }
+
 header h1 {
   font-weight: bold;
   font-size: 36px;
@@ -21,14 +23,13 @@ header h1 {
   margin: 0;
   display: inline;
 }
-
 header a {
   text-decoration: none;
   color: #fce138;
 }
 
 header nav {
-  float:right;
+  float: right;
   margin: 7px 0;
 }
 
@@ -66,41 +67,34 @@ footer a {
 }
 
 section {
-
   padding: 60px;
-  
-
 }
 
-/*Hero Style Start */
+/* Hero Style Start */
 .hero {
-
-  background-image: url(../image/hero-bg.jpg);
+  background-image: url('../image/hero-bg.jpg');
   height: 600px;
   background-size: cover;
   background-position: center;
   position: relative;
-
 }
+/* Hero Style End */
 
 .hero-form {
-  color: #024e76;
+  border: 3px solid #024e76;
   background-color: #fce138;
   padding: 20px;
   width: 500px;
-  border-style: solid;
-  border-width: 3px;
-  border-color: #024e76;
-  position:absolute;
+  color: #024e76;
+  position: absolute;
   bottom: 120px;
   right: 140px;
 }
 
 .hero-form h3 {
   font-size: 24px;
-  margin: 0px;
+  margin: 0;
 }
-
 .hero-form p {
   margin: 5px 0 15px 0;
 }
@@ -125,18 +119,10 @@ section {
   border: none;
   padding: 10px 20px;
   font-size: 16px;
-
 }
-/*Hero Style End */
 
 .intro {
-
   text-align: center;
-}
-
-.intro h2 {
-/* add this alongside your other declarations */
-
 }
 
 .intro p {
@@ -150,28 +136,6 @@ section {
 .steps {
   text-align: center;
   background: #fce138;
-}
-
-.steps h2 {
-
-
-}
-
-.section-title {
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
-  border-bottom: 3px solid;
-}
-
-.primary-border {
-  border-color: #fce138;
-}
-
-.secondary-border {
-  border-color: #39a6b2;
 }
 
 .steps div {
@@ -198,6 +162,23 @@ section {
   font-size: 38px;
 }
 
+.section-title {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  display: inline-block;
+  border-bottom: 3px solid;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+
 .trainers {
   text-align: center;
 }
@@ -221,14 +202,6 @@ section {
   width: 65%;
 }
 
-.text-left {
-  text-align: left;
-}
-
-.text-right {
-  text-align: right;
-}
-
 .trainer-bio h3 {
   font-size: 32px;
   margin-bottom: 8px;
@@ -243,4 +216,12 @@ section {
 .trainer-bio p {
   font-size: 17px;
   line-height: 1.3;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
 }
